# bobkonf2026

./: README.md  SETUP.md
.devcontainer/: devcontainer.json  ocaml-platform.vsix
.devcontainer/oxcaml/: devcontainer.json
.devcontainer/tsan/: devcontainer.json
exercises/: .ocamlformat  INSTRUCTIONS.md  LICENSE.md  dune-project  exercise1.opam  exercise2.opam  exercises.opam  utils.opam
exercises/base_implementation/: dune  treiber_stack.ml  treiber_stack.mli
exercises/exercise1/: README.md
exercises/exercise1/lib/: dune  treiber_stack1.ml  treiber_stack1.mli
exercises/exercise1/solution/: dune  tsan_trace  unit_tests_sol.ml
exercises/exercise1/test/: dune  unit_tests.ml
exercises/exercise2/: README.md
exercises/exercise2/lib/: dune  treiber_stack2.ml  treiber_stack2.mli
exercises/exercise2/solution/: dscheck_tests_sol.ml  dscheck_trace  dune  qcheck_lin_tests_sol.ml  unit_tests_sol.ml
exercises/exercise2/test/: dscheck_tests.ml  dune  qcheck_lin_tests.ml  unit_tests.ml
exercises/lib/: dune  spsc_queue.ml  spsc_queue.mli
exercises/test/: dscheck_tests.ml  dune  qcheck_stm_tests.ml  tests.ml
exercises/test/atomic/: README
exercises/utils/: barrier.mli  dune  utils.ml
talk/: 1-treiber-implem.md  1-treiber-interface.md  1-treiber-objective.md  1-treiber-ref-size.md  1-treiber.md  2-atomic-implem.md  2-concl-ex1.md  2-concl-ex2.md  2-data-races.md  2-race-conditions.md  3-conclusion.md  4-oxcaml.md  notes.md  ocaml-multicore-can.md  ocaml-multicore.md  part1.md  presentation.html  presentation.md
