(lang dune 3.20)

(name exercises)

(generate_opam_files true)

(source
 (github lyrm/bobkonf2026))

(authors "Carine Morel <carine@tarides.com>")

(maintainers "Carine Morel <carine@tarides.com>")

(license ISC)

(package
 (name utils)
 (synopsis "Useful functions for the exercises")
 (depends
  (ocaml
   (>= 5.2.0))))

(package
 (name exercise1)
 (synopsis "Exercise 1")
 (description "Treiber stack with a mutable size")
 (depends
  (ocaml
   (>= 5.2.0))
  (alcotest :with-test)))

; (package
;  (name exercise2)
;  (synopsis "Exercise 2")
;  (description "Treiber stack with a atomic size")
;  (depends
;   (ocaml
;    (>= 5.2.0))
;   (alcotest :with-test)
;   (dscheck :with-test)
;   (qcheck-stm :with-test)
;   (qcheck-lin :with-test))
;  (tags
;   ("bobkonf2026" "teaching")))

(package
 (name exercise3)
 (synopsis "Exercise 3")
 (description "Treiber stack with a working (but non-efficient) size")
 (depends
  (ocaml
   (>= 5.2.0))
  (alcotest :with-test)
  (dscheck :with-test)
  (qcheck-lin :with-test))
 (tags
  ("bobkonf2026" "teaching")))
