(lang dune 3.20)

(name exercises)

(generate_opam_files true)

(source
 (github lyrm/bobkonf2026))

(authors "Carine Morel <carine@tarides.com>")

(maintainers "Carine Morel <carine@tarides.com>")

(license ISC)

(package
 (name utils)
 (synopsis "Useful functions for the exercises")
 (depends
  (ocaml
   (>= 5.2.0))))

(package
 (name exercise1)
 (synopsis "Exercise 1")
 (description "Treiber stack with a mutable size")
 (depends
  (ocaml
   (>= 5.2.0))))
